chore: adjust code for deploy on heroku

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost:27017
+MONGO_URL=mongodb+srv://picinelli:123@cluster0.e4sjb.mongodb.net/ProjetoMyWallet?retryWrites=true&w=majority
 DB_NAME=ProjetoMyWallet
